# role-reaper

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cdk.json  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
lambda/: index.py  policy.json  requirements.txt  roleDisabler.py
lib/: role-reaper-stack.ts
test/: role-reaper.test.ts
